syntax = "proto2";

package opentxs.proto;
option optimize_for = CODE_SIZE;

message ChildCredentialParameters {
    optional uint32 version = 1;
    optional string masterID = 2;
}
