syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

import public "ContactEnums.proto";

message ContactItem {
    optional uint32 version = 1;
    optional ContactItemType type = 2;
    optional string value = 3;
    repeated ContactItemAttribute attribute = 4;
}
