syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

message CredentialSet {
    optional uint32 version = 1;
    optional string nymID = 2;
    optional string masterID = 3;
    repeated string activeChildren = 4;
    repeated string revokedChildren = 5;
}
