syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

message EquityParams
{
    optional uint32 version = 1;
    optional string type = 2;
    optional string issueDate = 3;
}
